Bugfix:If there is an ActiveObject on the Canvas and you press the cross key when a floating window is visible, the cross key does not work on the floating window.

--- a/SP-MangaEditer/css/common.css
+++ b/SP-MangaEditer/css/common.css
@@ -56,7 +56,7 @@ button:active, .custom-file-upload:active {
 }
 
 .floating-windowPromptClass {
-  width: 30%;
+  width: 40%;
   position: fixed;
   right: 0;
   top: 10%;
